# ai-commit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml  install.sh  test.sh
.github/: copilot-instructions.md
docs/: github-copilot-integration.md
prompts/: system.md
src/: ai.rs  cli.rs  config.rs  error.rs  git.rs  main.rs  prompts.rs
