[package]
name = "ai-commit"
version = "0.1.0"
edition = "2024"
description = "AI-powered git commit message generator with support for multiple LLM providers"
authors = ["Bob Liu <akagi201@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/longcipher/ai-commit"
readme = "README.md"
keywords = ["git", "ai", "commit", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ai-commit"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env", "color"] }

# AI/LLM client
copilot-client = "0.1.0"
genai = "0.4.0-alpha.10"

# Configuration management
config = "0.15.13"
serde = { version = "1.0", features = ["derive"] }

# Git operations
git2 = "0.20"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
console = "0.16"
dialoguer = { version = "0.11", features = ["editor"] }
indicatif = "0.18"

# Serialization
toml = "0.9"

[dev-dependencies]
tempfile = "3.0"
